[gd_scene load_steps=15 format=3 uid="uid://dopuukxt8g7ej"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_5m0xc"]
[ext_resource type="Script" path="res://entities/player/abilities.gd" id="2_b6kdo"]
[ext_resource type="Script" path="res://entities/player/grabber.gd" id="2_pidil"]
[ext_resource type="Script" path="res://entities/player/player_hud.gd" id="3_lgyin"]
[ext_resource type="Texture2D" uid="uid://c5ai8kqx7hatc" path="res://assets/ui/energy_bar_under.png" id="3_xedsx"]
[ext_resource type="Texture2D" uid="uid://blhpk3ga2cfsy" path="res://assets/ui/energy_bar_over.png" id="4_2e0q3"]
[ext_resource type="Texture2D" uid="uid://drcarhsr6b2bx" path="res://assets/ui/hand-sheet.png" id="4_cnvr1"]
[ext_resource type="Script" path="res://entities/player/position_swapper.gd" id="4_im8co"]
[ext_resource type="Texture2D" uid="uid://duy12qmixa3ah" path="res://assets/ui/energy_bar_in.png" id="5_smxdj"]
[ext_resource type="Texture2D" uid="uid://orclydn4tkd1" path="res://assets/ui/reticule.png" id="7_rgvwd"]
[ext_resource type="Texture2D" uid="uid://dq8l15a3pvc40" path="res://assets/ui/reticule_active.png" id="8_uv7fy"]
[ext_resource type="Texture2D" uid="uid://b6mge48ksod8h" path="res://assets/ui/hand.png" id="9_ri0pw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ler78"]
height = 1.5

[sub_resource type="AnimatedTexture" id="AnimatedTexture_7btg6"]
frames = 2
speed_scale = 0.0
frame_0/texture = ExtResource("7_rgvwd")
frame_1/texture = ExtResource("8_uv7fy")
frame_1/duration = 1.0

[node name="Player" type="CharacterBody3D"]
collision_mask = 7
script = ExtResource("1_5m0xc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("CapsuleShape3D_ler78")

[node name="Abilities" type="Node" parent="."]
script = ExtResource("2_b6kdo")

[node name="Grabber" type="Node" parent="Abilities"]
script = ExtResource("2_pidil")

[node name="PositionSwapper" type="Node" parent="Abilities"]
script = ExtResource("4_im8co")

[node name="Head" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="HandSprite" type="Sprite3D" parent="Head/Camera3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.845, -0.365, -0.81)
pixel_size = 0.004
billboard = 1
shaded = true
no_depth_test = true
texture_filter = 2
texture = ExtResource("4_cnvr1")
hframes = 2

[node name="AimRayCast" type="RayCast3D" parent="Head/Camera3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -5, 0)
collision_mask = 2

[node name="PlayerHUD" type="Control" parent="." node_paths=PackedStringArray("player")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_lgyin")
player = NodePath("..")

[node name="StaminaBar" type="TextureProgressBar" parent="PlayerHUD"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 61.0
offset_top = 10.0
offset_right = 173.0
offset_bottom = 50.0
min_value = 10.0
value = 100.0
texture_under = ExtResource("3_xedsx")
texture_over = ExtResource("4_2e0q3")
texture_progress = ExtResource("5_smxdj")
texture_progress_offset = Vector2(0, -1)

[node name="Reticule" type="TextureRect" parent="PlayerHUD"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AnimatedTexture_7btg6")
stretch_mode = 3

[node name="TextureRect" type="TextureRect" parent="PlayerHUD"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -142.0
offset_top = -142.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("9_ri0pw")
